Issue #1159
